# ffxiv_simhelper

./: Cargo.toml  README.md  build_simhelper.ps1  build_simhelper_backend.ps1  cross_compile_in_window.sh  ffxiv_simbot_run.ps1  move_rdps_table.ps1  setup_ffxiv_data.sh
cmd/: Cargo.toml
cmd/config/: db_config.yml
cmd/src/: local_server.rs  main.rs  profile.rs  profile_beststats.rs  profile_dpsanalysis.rs  profile_quicksim.rs  profile_statweight.rs
lib/db/: Cargo.toml
lib/db/src/: character.rs  clan.rs  config.rs  constants.rs  data.rs  database_manager.rs  equipment.rs  food.rs  job.rs  jobclass.rs  jsonparser.rs  lib.rs  materia.rs  medicine.rs  race.rs  stat.rs  stat_calculator.rs
lib/dps_simulator/: Cargo.toml
lib/dps_simulator/src/: lib.rs  player.rs  priority_table.rs  simulator.rs  skill.rs  status.rs  target.rs
lib/engine/: Cargo.toml
lib/engine/src/: engine.rs  engine_config.rs  ffxivcontext.rs  lib.rs
lib/ffxiv-simbot-api/: Cargo.toml
lib/ffxiv-simbot-api/src/: errors.rs  lib.rs  role.rs
lib/ffxiv-simbot-api/src/api_handler/: bestpartner.rs  gearcompare.rs  mod.rs  quicksim.rs  simulate.rs  statcompare.rs  statweights.rs
lib/ffxiv-simbot-api/src/api_server/: api_router.rs
lib/ffxiv-simbot-api/src/request/: convert_to_simulation_board.rs  gear_compare_api_request.rs  mod.rs  simulation_api_request.rs  stat_compare_api_request.rs  stat_weights_api_request.rs
lib/ffxiv-simbot-api/src/response/: aggregate_damage_simulation_data.rs  best_partner_api_response.rs  convert_simulation_result.rs  from_with_time.rs  mod.rs  simulation_api_response.rs  simulation_result.rs  stat_compare_api_response.rs  stat_compare_response.rs  stat_weights_api_response.rs
lib/ffxiv-simbot-combat-components/: Cargo.toml
lib/ffxiv-simbot-combat-components/src/: consts.rs  id_entity.rs  lib.rs  owner_tracker.rs  player.rs  priority_table.rs  skill.rs  status.rs  target.rs  turn_type.rs  types.rs  util.rs
lib/ffxiv-simbot-combat-components/src/combat_resources/: ffxiv_combat_resources.rs  mod.rs  ninja_combat_resources.rs  sage_combat_resources.rs
lib/ffxiv-simbot-combat-components/src/damage_calculator/: contribution_share.rs  damage_rdps_profile.rs  mod.rs  multiplier_calculator.rs  raw_damage_calculator.rs  rdps_calculator.rs
lib/ffxiv-simbot-combat-components/src/event/: ffxiv_event.rs  ffxiv_player_internal_event.rs  mod.rs  turn_info.rs
lib/ffxiv-simbot-combat-components/src/event_ticker/: auto_attack_ticker.rs  ffxiv_event_ticker.rs  global_ticker.rs  independent_ticker.rs  mod.rs
lib/ffxiv-simbot-combat-components/src/jobs/: mod.rs  ninja.rs  sage.rs
lib/ffxiv-simbot-combat-components/src/jobs_skill_data/: mod.rs
lib/ffxiv-simbot-combat-components/src/jobs_skill_data/astrologian/: abilities.rs  combat_resources.rs  priorities.rs
lib/ffxiv-simbot-combat-components/src/jobs_skill_data/bard/: abilities.rs  combat_resources.rs  priorities.rs
lib/ffxiv-simbot-combat-components/src/jobs_skill_data/black_mage/: abilities.rs  combat_resources.rs  priorities.rs
lib/ffxiv-simbot-combat-components/src/jobs_skill_data/dancer/: abilities.rs  combat_resources.rs  priorities.rs
lib/ffxiv-simbot-combat-components/src/jobs_skill_data/darkknight/: abilities.rs  combat_resources.rs  priorities.rs
lib/ffxiv-simbot-combat-components/src/jobs_skill_data/dragoon/: abilities.rs  combat_resources.rs  dragoon_abilities.rs  priorities.rs
lib/ffxiv-simbot-combat-components/src/live_objects/: mod.rs  turn_type.rs
lib/ffxiv-simbot-combat-components/src/rotation/: cooldown_timer.rs  ffxiv_priority_table.rs  information_needed_for_rotation_decision.rs  mod.rs  priority_simulation_data.rs  priority_table.rs  simulate_status.rs  simulated_combat_resource.rs
lib/ffxiv-simbot-combat-components/src/skill/: attack_skill.rs  damage_category.rs  mod.rs  skill_target.rs  use_type.rs
lib/ffxiv-simbot-combat-components/src/status/: buff_status.rs  debuff_status.rs  mod.rs  snapshot_status.rs  status_apply.rs  status_event.rs  status_holder.rs  status_info.rs  status_timer.rs
lib/ffxiv-simbot-dps-simulator/: Cargo.toml
lib/ffxiv-simbot-dps-simulator/src/: damage_rdps_profile.rs  ffxiv_event.rs  lib.rs  multiplier_calculator.rs  raw_damage_calculator.rs  simulation_result.rs  simulator.rs  skill_calculator.rs  skill_simulator.rs  turn_calculator.rs  util.rs
lib/ffxiv-simbot-dps-simulator/src/combat_simulator/: ffxiv_simulation_board.rs  mod.rs
lib/ffxiv-simbot-dps-simulator/src/damage_calculator/: damage_rdps_profile.rs  mod.rs  multiplier_calculator.rs  raw_damage_calculator.rs
lib/ffxiv-simbot-dps-simulator/src/event_ticker/: auto_attack_ticker.rs  global_ticker.rs  independent_ticker.rs  mod.rs
lib/ffxiv-simbot-dps-simulator/src/party/: mod.rs
lib/ffxiv-simbot-dps-simulator/src/skill_simulator/: ffxiv_skill_simulator.rs  mod.rs  skill_calculator.rs
lib/ffxiv-simbot-engine/: Cargo.toml
lib/ffxiv-simbot-engine/src/: engine.rs  engine_config.rs  ffxivcontext.rs  lib.rs
lib/ffxiv-simbot-server/: Cargo.toml
lib/ffxiv-simbot-server/src/: get_equipment.rs  lib.rs
lib/ffxiv-simhelper-api/: Cargo.toml
lib/ffxiv-simhelper-api/src/: config.rs  errors.rs  lib.rs
lib/ffxiv-simhelper-api/src/api_handler/: bestpartner.rs  beststats.rs  dpsanalysis.rs  gearcompare.rs  mod.rs  quicksim.rs  statweights.rs
lib/ffxiv-simhelper-api/src/api_server/: api_router.rs  mod.rs
lib/ffxiv-simhelper-api/src/request/: best_stats_api_request.rs  convert_to_simulation_board.rs  gear_compare_api_request.rs  mod.rs  simulation_api_request.rs  stat_weights_api_request.rs
lib/ffxiv-simhelper-api/src/response/: aggregate_damage_simulation_data.rs  best_partner_api_response.rs  convert_simulation_result.rs  from_with_time.rs  mod.rs  simulation_api_response.rs  stat_weights_api_response.rs
lib/ffxiv-simhelper-dps-simulator/: Cargo.toml
lib/ffxiv-simhelper-dps-simulator/src/: lib.rs  simulation_result.rs
lib/ffxiv-simhelper-dps-simulator/src/combat_simulator/: ffxiv_simulation_board.rs  mod.rs
lib/test/: Cargo.toml
lib/test/src/: bestpartner.rs  dpsanalysis.rs  lib.rs
(+601 files in other folders)
