[package]
name = "ffxiv-simhelper-cmd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ffxiv-simhelper"
path = "src/main.rs"
doc = false

[[bin]]
name = "ffxiv-simhelper-local"
path = "src/local_server.rs"
doc = false

[[bin]]
name = "profile-dpsanalysis"
path = "src/profile_dpsanalysis.rs"
doc = false

[[bin]]
name = "profile-beststats"
path = "src/profile_beststats.rs"
doc = false

[dependencies.ffxiv-simhelper-dps-simulator]
version = "0.1.0"
path = "../lib/ffxiv-simhelper-dps-simulator"

[dependencies.ffxiv-simhelper-combat-components]
version = "0.1.0"
path = "../lib/ffxiv-simhelper-combat-components"

[dependencies.ffxiv-simhelper-api]
version = "0.1.0"
path = "../lib/ffxiv-simhelper-api"

[dependencies]
axum = "0.7"
serde = { version = "1.0.196", features = ["derive"] }
log = "0.4.20"
itertools = "0.13.0"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
