[package]
name = "ffxiv-simbot-lib-engine"
version = "0.1.0"
edition = "2021"
description = "Raidbot engine for ffxivsimbot"
authors = ["Junyeop Na <ns0902@naver.com>"]
repository = "https://github.com/ffxiv-simbot"


[dependencies]
project-root = "0.2.2"
itertools = { version = "0.10.0", features = [] }
cargo-docs = "0.1.*"

[dependencies.ffxiv-simbot-lib-db]
version = "0.1.0"
path = "../db"