[package]
name = "ffxiv-simbot-api"
version = "0.1.0"
edition = "2021"
description = "FFXIV Simbot API"
authors = ["Junyeop Na <ns0902@naver.com>"]
repository = "https://github.com/ffxiv-simbot"


[dependencies]
project-root = "0.2"
serde = { version = "1", features = ["derive"] }
fstrings = "0.2"
serde_json = "1"
itertools = "0.13"
cargo-docs = "0.1"
axum = "0.7"
error-chain = "0.12.4"
juniper= "0.16"

[dependencies.ffxiv-simbot-combat-components]
version = "0.1.0"
path = "../ffxiv-simbot-combat-components"

[dependencies.ffxiv-simbot-db]
version = "0.1.0"
path = "../ffxiv-simbot-db"
