[package]
name = "ffxiv-simbot-api"
version = "0.1.0"
edition = "2021"
description = "FFXIV Simbot API"
authors = ["Junyeop Na <ns0902@naver.com>"]
repository = "https://github.com/ffxiv-simbot"


[dependencies]
project-root = "0.2"
serde = { version = "1", features = ["derive"] }
fstrings = "0.2"
serde_json = "1"
itertools = "0.13"
cargo-docs = "0.1"
axum = "0.7"
thiserror = "1"
tower-http = { version = "0.5", features = ["cors"] }

[dependencies.ffxiv-simbot-engine]
version = "0.1.0"
path = "../ffxiv-simbot-engine"

[dependencies.ffxiv-simbot-combat-components]
version = "0.1.0"
path = "../ffxiv-simbot-combat-components"

[dependencies.ffxiv-simbot-db]
version = "0.1.0"
path = "../ffxiv-simbot-db"

[dependencies.ffxiv-simbot-dps-simulator]
version = "0.1.0"
path = "../ffxiv-simbot-dps-simulator"
