[package]
name = "ffxiv-simbot-combat-components"
version = "0.1.0"
edition = "2021"
description = "Raidbot engine for ffxivsimbot"
authors = ["Junyeop Na <ns0902@naver.com>"]
repository = "https://github.com/ffxiv-simbot"


[dependencies]
project-root = "0.2.2"
itertools = { version = "0.10.0", features = [] }
lazy_static = "1.4.0"
sorted-vec = "0.8"
log = "0.4.20"
rand = "0.8.5"

[dependencies.ffxiv-simbot-db]
version = "0.1.0"
path = "../ffxiv-simbot-db"
