[package]
name = "ffxiv-simbot-engine"
version = "0.1.0"
edition = "2021"
description = "Raidbot engine for ffxivsimbot"
authors = ["Junyeop Na <ns0902@naver.com>"]
repository = "https://github.com/ffxiv-simbot"


[dependencies]
project-root = "0.2.2"
itertools = { version = "0.10.0", features = [] }
cargo-docs = "0.1.*"
serde_yaml = "0.9.30"
serde = { version = "1.0.196", features = ["derive"] }

[dependencies.ffxiv-simbot-db]
version = "0.1.0"
path = "../ffxiv-simbot-db"