[package]
name = "ffxiv-simhelper-api"
version = "0.1.0"
edition = "2021"
description = "FFXIV Simhelper API Handler"
authors = ["Junyeop Na <ns0902@naver.com>"]
repository = "https://github.com/ffxiv-simhelper"


[dependencies]
project-root = "0.2"
serde = { version = "1", features = ["derive"] }
fstrings = "0.2"
serde_json = "1"
itertools = "0.13"
cargo-docs = "0.1"
axum = "0.7"
thiserror = "1"
tower-http = { version = "0.5", features = ["cors"] }
log = "0.4.20"
lazy_static = "1.4.0"
serde_yaml = "0.9"

[dependencies.ffxiv-simhelper-combat-components]
version = "0.1.0"
path = "../ffxiv-simhelper-combat-components"

[dependencies.ffxiv-simhelper-dps-simulator]
version = "0.1.0"
path = "../ffxiv-simhelper-dps-simulator"
