[package]
name = "ffxiv-simhelper-dps-simulator"
version = "0.1.0"
edition = "2021"
description = "Raidbot engine for ffxivsimhelper"
authors = ["Junyeop Na <ns0902@naver.com>"]
repository = "https://github.com/ffxiv-simhelper"


[dependencies]
project-root = "0.2.2"
itertools = { version = "0.10.0", features = [] }
cargo-docs = "0.1.*"
sorted-vec = "0.8.3"
lazy_static = "1.4.0"
log = "0.4"
serde = { version = "1.0.196", features = ["derive"] }

[dependencies.ffxiv-simhelper-combat-components]
version = "0.1.0"
path = "../ffxiv-simhelper-combat-components"